<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="100"
    tools:context=".activity.TransactionCActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/addcontact_statusbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        app:cardBackgroundColor="@color/transparent"
        app:strokeColor="@color/colorAccent"
        app:strokeWidth="1dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="0dp">


        <ImageView
            android:id="@+id/sidebar_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:onClick="onBackPressed"
            android:paddingLeft="5dp"
            android:src="@drawable/back_arrow">

        </ImageView>

        <TextView
            android:id="@+id/friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/customername"
            android:textColor="?attr/themeArticleTitleColor"
            android:textSize="20sp">

        </TextView>
    </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/themeArticleTitleColor"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="83">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/transaction_chat_recycle"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>


    </RelativeLayout>

    <LinearLayout
        android:id="@+id/bottom_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_weight="8"
        android:orientation="horizontal">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/transaction_debit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/debitbutton"
                android:textColor="@color/warning"
                android:textSize="18sp">

            </TextView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/transaction_credit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="7dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            app:strokeColor="@color/colorAccent"
            app:strokeWidth="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/creditbutton"
                android:textColor="@color/sucess"
                android:textSize="18sp">

            </TextView>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

</LinearLayout>