<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:visibility="visible"
            android:weightSum="100">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_weight="50"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="100">

                <ImageView
                    android:layout_width="145dp"
                    android:layout_height="55dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    app:srcCompat="@drawable/logo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"

                android:layout_weight="25"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                android:weightSum="100">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner2"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    app:ms_background_color="?attr/themeWindowBackgroundColor"
                    app:ms_text_color="?attr/themeArticleTitleColor" />

            </LinearLayout>




            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="visible"
                android:weightSum="100">

                <com.jaredrummler.materialspinner.MaterialSpinner
                    android:id="@+id/spinner"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    app:ms_background_color="?attr/themeWindowBackgroundColor"
                    app:ms_text_color="?attr/themeArticleTitleColor"
                    />



            </LinearLayout>


        </LinearLayout>



        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarr"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:visibility="gone"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="55"
            android:background="@drawable/bg3">


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="35">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:gravity="center"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/channel_load_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@id/channels_action_bar"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/load_channels_title"
                            android:layout_width="wrap_content"
                            android:layout_height="69dp"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:gravity="center"
                            android:text="@string/welcome1"
                            android:textAlignment="center"
                            android:textColor="?attr/themeArticleTitleColor"

                            android:textSize="18sp"
                            android:textStyle="bold|italic" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="1dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/playlist_url"
                            android:layout_width="match_parent"
                            android:layout_height="63dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="15dp"
                            android:ems="15"
                            android:gravity="center"
                            android:padding="8dp"
                            android:text="@string/welcome2"
                            android:textColor="?attr/themeArticleTitleColor" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/channels_action_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@drawable/buttonshape"
                    app:layout_constraintTop_toBottomOf="@+id/channel_load_bar">


                    <TextView
                        android:id="@+id/load_default_button"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginVertical="10dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="8dp"
                        android:gravity="center"
                        android:text="@string/welcome3button"
                        android:textAllCaps="true"

                        android:textColor="#fff"
                        android:textSize="15sp"
                        android:textStyle="normal|bold" />

                </LinearLayout>


            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
